# states

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  states.json
.github/: FUNDING.yml
api/: states.py
app/: __init__.py  config.py  main.py
app/crud/: db.py  detas.py
app/models/: state_model.py
app/routers/: states.py
crud/: db.py
static/: package-lock.json  tailwind.config.js
templates/: index.html  layout.html
views/: home.py
